fixed the code to get the light mode and dark mode to work

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,69 +1,62 @@
-
-
 header {
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    width: 100%;
-    height: 100px;
-    border-bottom: 10px black double;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  width: 100%;
+  height: 100px;
+  border-bottom: 10px black double;
 }
 
 section {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    height: 90%;
-    width: 50%;
-    flex-direction: column
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  height: 90%;
+  width: 50%;
+  flex-direction: column;
 }
 
-div{
-    display: flex;
-    height: 100%;
-    width: 100%;
+div {
+  display: flex;
+  height: 100%;
+  width: 100%;
 }
 
-#title{
-    border-right: 10px black double;
+#title {
+  border-right: 10px black double;
 }
 
 h1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url(../images/background\ image.jfif);
-    color: white;
-    height: 90%;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    border-radius: 3%;
-    font-size: 100px;
-    margin-right: 5px;
-
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url(../images/background\ image.jfif);
+  color: white;
+  height: 90%;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 3%;
+  font-size: 100px;
+  margin-right: 5px;
 }
 
-
-form{
-    display: flex;
-    height: 100%;
-    width: 100%;
+form {
+  display: flex;
+  height: 100%;
+  width: 100%;
 }
 
 /* Dark Mode */
 .dark {
-    background-color:#243447;
-    height: 100vh;
-    color: #bebebe
-   
-  }
+  background-color: #243447;
+  height: 100vh;
+  color: #bebebe;
+}
 
-  
-  /* Light Mode */
-  .light {
-    background-color: #f0ead6;
-    color: black;
-    height: 100vh;
-  }
+/* Light Mode */
+.light {
+  background-color: #f0ead6;
+  color: black;
+  height: 100vh;
+}
